--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </form>
 
     <div id="display"></div>
+    <button id="deletebtn">Delete this meme</button>
 
     <script src="app.js"></script>
   </body>
