updated styling and delete method

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
       <input type="text" id="topText" name="topText" />
       <label for="btmText">Bottom Text: </label>
       <input type="text" id="btmText" name="btmText" />
-
-      <button>Ready to lol</button>
+      <button>Add Meme</button>
     </form>
-
+    <p>Double-click to remove the meme</p>
     <div id="display"></div>
-    <button id="deletebtn">Delete this meme</button>
 
     <script src="app.js"></script>
   </body>
